--- a/src/App.css
+++ b/src/App.css
@@ -8,22 +8,19 @@
 html{
   background-color: #303134;
 }
-.horizontal-line{
-  border-top: 2px solid black;
-  width: 100%;
-  margin: 1rem 0;
-}
 span{
   display: 'block';
 }
 #ResumeTitle
 {
+  background-color: #313639;
   padding-top: 5px;
   padding-bottom: 0;
   color: black;
+  border-bottom: 2px solid black;
 }
 .container
 {
-  margin:auto;
-  padding-top: 20%;
+  margin: auto;
+  padding-top: 8rem;
 }
