--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -2,3 +2,25 @@
 {
     width: 25rem;
 }
+#navbar
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#navbar li
+{
+    list-style: none;
+    padding: 0 20px;
+    position: relative;
+}
+#navbar li a
+{
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: white;
+}
+#navbar li a:hover{
+    color: blue;
+}
