--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -20,7 +20,17 @@
     font-size: 1.4rem;
     font-weight: 600;
     color: white;
+    transition: 0.3s ease-in-out;
 }
 #navbar li a:hover{
-    color: blue;
+    color:#5684ae;
+}
+#navbar li a:hover::after{
+    content: "";
+    width: 30%;
+    height: 2px;
+    background: #5684ae;
+    position: absolute;
+    bottom: -4px;
+    left: 20px;
 }
