css update for nav bar including the title

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -2,11 +2,23 @@
 {
     width: 25rem;
 }
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color:  #313639;
+    padding: 20px 80px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+}
+#resumetitle{
+    color: white;
+}
 #navbar
 {
     display: flex;
     align-items: center;
     justify-content: center;
+   
 }
 #navbar li
 {
