--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -2,6 +2,10 @@
 {
     width: 25rem;
 }
+Carousel
+{
+    z-index: -1;
+}
 nav{
     display: flex;
     align-items: center;
@@ -18,7 +22,6 @@ nav{
     display: flex;
     align-items: center;
     justify-content: center;
-   
 }
 #navbar li
 {
@@ -45,4 +48,47 @@ nav{
     position: absolute;
     bottom: -4px;
     left: 20px;
+}
+#mobile
+{
+    display: none;
+}
+#mobile i{
+    color: white;
+    align-items: center;
+}
+
+@media screen and (max-width:769px){
+    #navbar
+    {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;        
+        top: 90px;
+        right: -300px;
+        width: 300px;
+        height: 100vh;
+        background: #313639;
+        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+        padding: 40px 0 0 10px;
+        transition: 0.3s ease-in-out;
+    }
+    #navbar.active
+    {
+        right: 0px;
+    }
+    #navbar li{
+        margin-bottom: 25px;
+    }
+    #mobile
+    {
+        display: block;
+    }
+    #mobile i 
+    {
+        font-size: 24px;
+        cursor: pointer;
+    }
 }
